feat: tenant isolation, optimistic locking, analytics expansion, CI/CD GHCR deploy
- Tenant isolation enforced on branch/ticket/window/appointment/provider endpoints
- V13 migration: optimistic locking column on app.ticket (prevents double-serve races)
- Analytics: per-service breakdown, expanded hourly metrics
- Security: AuthPrincipal/CurrentUser annotations, JwtAuthFilter tenant injection
- WebSocket origins updated, STOMP auth improved
- docker-compose.prod.yml: BACKEND_IMAGE/WEB_IMAGE vars for GHCR-based deploys
- CI: deploy workflow pulls prebuilt GHCR images instead of building on droplet

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>